# TetrisAndroid

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/tetrisandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/res/shaders/: fSprite.txt  vSprite.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: native-lib.cpp
app/src/main/cpp/src/game/: Game.cpp  Game.hpp
app/src/main/cpp/src/graphics/: MyAssetManager.cpp  MyAssetManager.h  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  VBO.cpp  VBO.hpp  stb_image.h
app/src/main/cpp/src/objects/: FigureManager.cpp  FigureManager.hpp
app/src/main/cpp/src/objects/drawable/: Background.cpp  Background.hpp  Field.cpp  Field.hpp  IDrawableObject.hpp  NumerableObject.cpp  NumerableObject.hpp  Score.cpp  Score.hpp  Speed.cpp  Speed.hpp  Text.cpp  Text.hpp
app/src/main/cpp/src/utilities/: Clock.cpp  Clock.hpp  DataManager.cpp  DataManager.h  FlexibleSizes.cpp  FlexibleSizes.hpp
app/src/main/java/com/example/datamanager/: DataManager.java
app/src/main/java/com/example/renderer/: MyRenderer.java  MySurfaceView.java
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_menu.xml  activity_options.xml  activity_start.xml  fragment_options.xml  fragment_start.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
